Add Home button in toolbar with rooting to main page

--- a/seven-days-challenge/src/app/mat-toolbar/mat-toolbar.component.scss
+++ b/seven-days-challenge/src/app/mat-toolbar/mat-toolbar.component.scss
@@ -16,6 +16,21 @@
   width: 40px;
 }
 
+.back-icon {
+  margin-left: 20px;
+  color: white;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+}
+.back-icon:hover{
+  color: red;
+}
+
+.welcome-title{
+  margin-left: 40px;
+}
+
 .spacer {
   flex: 1;
 }
